--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,4 +7,5 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GroundBox",DevComment="")
++GameplayTagList=(Tag="Obstacle",DevComment="")
 
